fix: tab bar z-index

--- a/src/app/shared/tab-bar/tab-bar.component.scss
+++ b/src/app/shared/tab-bar/tab-bar.component.scss
@@ -5,7 +5,7 @@ $header-content-width: 940px;
   background-color: #fff;
   position: sticky;
   user-select: none;
-  z-index: z('navbar') - 1;
+  z-index: z('tab-bar');
   top: 55px;
   box-shadow: 0 1px 2px #00000033;
 
